# todo.md

./: .gitignore  AGENTS.md  README.md  deny.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.tasks/: 1782671941159-remove-save-button-task-descriptions-shoud-save-automatically.md  1782671985267-dont-use-native-eg-macos-dropdown-selector-for-changing-task-status.md  1782672056441-fix-bord-text-input-for-creating-new-tasks-it-should-expand-to-display-all-the-text-instead-of-hiding-it.md  1782672258806-add-more-task-metadata.md  1782672443686-remove-arrow-icons-from-tasks-in-board-view.md  1782672479489-design-how-to-release-the-app.md  1782672569669-add-ability-to-paste-images-into-task-descriptions.md  1782672633079-add-context-menu-right-click-for-tasks-on-the-board.md  1782675368199-add-dependencies-between-tasks.md  1782676139895-update-style-of-markdown-editor.md  1782677187068-remove-scrollbars.md  1782677359323-fix-focus-highlight-around-project.md  1782677389850-fix-drag-position-indicator-shows-up-on-top-of-task-card-not-between-cards.md  1782677887741-fix-when-i-open-a-task-the-title-is-selected.md  1782678793570-fix-moving-project-by-dragging-them-only-works-in-the-up-direction-and-not-down-the-right-click-move-updown-both-work-so-its-an-issue-just-with-dragging.md  (+15 more)
src/: main.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  explorer.rs  images.rs  main.rs  models.rs  paths.rs  projects.rs  registry.rs  tests.rs  text.rs  tickets.rs
(+15 files in other folders)
