[package]
name = "todo-md"
version = "0.1.0"
description = "A lightweight Markdown-backed task board"
authors = ["Todo MD"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
